--- a/pantheon.yml
+++ b/pantheon.yml
@@ -6,4 +6,12 @@ workflows:
     after:
       - type: webphp
         description: Push changes back to GitHub if needed
-        script: private/scripts/quicksilver/quicksilver-pushback/push-back.php
+        script: private/scripts/quicksilver-pushback/push-back.php
+      - type: webphp
+        description: Import configuration from .yml files
+        script: private/scripts/drush_config_import/drush_config_import.php
+  deploy:
+    after:
+      - type: webphp
+        description: Import configuration from .yml files
+        script: private/scripts/drush_config_import/drush_config_import.php
