bootstrap business theme and config

--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -1,5 +1,5 @@
 uuid: a5633428-e697-41e2-8a74-a98f93dcf1dc
-name: d8-build-tools
+name: 'Drupal 8 Build Tools Example'
 mail: danny.pfeiffer@pantheon.io
 slogan: ''
 page:
