--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": ">=7.3",
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
+        "drupal/bootstrap_business": "1.0-beta4",
         "drupal/core-composer-scaffold": "^8.8.1",
         "drupal/core-recommended": "^8.8",
         "drush-ops/behat-drush-endpoint": "^9.3",
