--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "drupal/bootstrap_business": "1.0-beta4",
         "drupal/core-composer-scaffold": "^8.8.1",
         "drupal/core-recommended": "^8.8",
+        "drupal/paragraphs": "^1.12",
         "drush-ops/behat-drush-endpoint": "^9.3",
         "drush/drush": "^8.4.5",
         "pantheon-systems/drupal-integrations": "^8",
